--- a/Qx.rewrite.baidu.conf
+++ b/Qx.rewrite.baidu.conf
@@ -5,4 +5,5 @@ hostname = s.bdstatic.com,m.baidu.com
 
 # Remove the trigger of index suggest click.
 ^(http|https):\/\/m\.baidu\.com\/ url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
+^(http|https):\/\/m\.baidu\.com\/tc.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
 ^(http|https):\/\/m\.baidu\.com\/.*js_sug.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.js.sug.Qx.js
