--- a/Qx.rewrite.baidu.conf
+++ b/Qx.rewrite.baidu.conf
@@ -9,9 +9,9 @@ hostname = s.bdstatic.com,m.baidu.com,www.baidu.com,baidu.com
 # ^(http|https):\/\/m\.baidu\.com\/tc.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
 # ^(http|https):\/\/m\.baidu\.com\/.*js_sug.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.js.sug.Qx.js
 
-^(http|https):\/\/(www\.)?baidu\.com\/ url response-body "plus_js_bottom"> response-body "plus_js_bottom">(function(){if(!localStorage["fxxkBaidu"]){localStorage.clear();localStorage["fxxkBaidu"]="true";alert("Done.");}})();
-^(http|https):\/\/m\.baidu\.com\/ url response-body "plus_js_bottom"> response-body "plus_js_bottom">(function(){if(!localStorage["fxxkBaidu"]){localStorage.clear();localStorage["fxxkBaidu"]="true";alert("Done.");}})();
-^(http|https):\/\/(www\.)?baidu\.com\/tc.* url response-body "plus_js_bottom"> response-body "plus_js_bottom">(function(){if(!localStorage["fxxkBaidu"]){localStorage.clear();localStorage["fxxkBaidu"]="true";alert("Done.");}})();
-^(http|https):\/\/m\.baidu\.com\/tc.* url response-body "plus_js_bottom"> response-body "plus_js_bottom">(function(){if(!localStorage["fxxkBaidu"]){localStorage.clear();localStorage["fxxkBaidu"]="true";alert("Done.");}})();
-^(http|https):\/\/(www\.)?baidu\.com\/.*js_sug.* url response-body bind\(\\"click\\",function\(a,c,h\)\{return function\(e\) response-body bind(\"click\",function(a,c,h){return a&&a["length"]&&a[0]=="sug"?function(e){void 0}:function(e)
-^(http|https):\/\/m\.baidu\.com\/.*js_sug.* url response-body bind\(\\"click\\",function\(a,c,h\)\{return function\(e\) response-body bind(\"click\",function(a,c,h){return a&&a["length"]&&a[0]=="sug"?function(e){void 0}:function(e)
+^(http|https):\/\/(www\.)?baidu\.com\/ url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
+^(http|https):\/\/m\.baidu\.com\/ url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
+^(http|https):\/\/(www\.)?baidu\.com\/tc.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
+^(http|https):\/\/m\.baidu\.com\/tc.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
+^(http|https):\/\/(www\.)?baidu\.com\/.*js_sug.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.js.sug.Qx.js
+^(http|https):\/\/m\.baidu\.com\/.*js_sug.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.js.sug.Qx.js
