--- a/Qx.rewrite.baidu.conf
+++ b/Qx.rewrite.baidu.conf
@@ -1,17 +1,6 @@
-hostname = s.bdstatic.com,m.baidu.com,www.baidu.com,baidu.com
+hostname = *.bdstatic.com, *.baidu.com
 
-# Reject Baidu BoxJS
-^(http|https):\/\/s\.bdstatic\.com\/common\/openjs\/openBox\.js.* url reject
-
-# Remove the trigger of index suggest click.
-# ^(http|https):\/\/(www\.)?baidu\.com\/ url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
-# ^(http|https):\/\/m\.baidu\.com\/ url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
-# ^(http|https):\/\/m\.baidu\.com\/tc.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
-# ^(http|https):\/\/m\.baidu\.com\/.*js_sug.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.js.sug.Qx.js
-
-^(http|https):\/\/(www\.)?baidu\.com\/ url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
-^(http|https):\/\/m\.baidu\.com\/ url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
-^(http|https):\/\/(www\.)?baidu\.com\/tc.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
-^(http|https):\/\/m\.baidu\.com\/tc.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.m.Qx.js
-^(http|https):\/\/(www\.)?baidu\.com\/.*js_sug.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.js.sug.Qx.js
-^(http|https):\/\/m\.baidu\.com\/.*js_sug.* url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/baidu.js.sug.Qx.js
+# pure baidu
+^https?:\/\/.*\.baidu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 15_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 matrixstyle/0 SP-engine/2.30.0 main%2F1.0 matrixstyle/0 flyflow/5.7.1.30 baiduboxapp/5.7.1.30 (Baidu; P2 15.1) NABar/1.0$2
+^https?:\/\/.*\.bdstatic\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 15_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 matrixstyle/0 SP-engine/2.30.0 main%2F1.0 matrixstyle/0 flyflow/5.7.1.30 baiduboxapp/5.7.1.30 (Baidu; P2 15.1) NABar/1.0$2
+^https?:\/\/.*\.baidu\.com\/.*s\?word url script-response-body https://github.com/shinrai2/Qx.js/raw/main/pure_searchbox.js
