update url for using cloudflare cdn

--- a/Qx.rewrite.baidu.conf
+++ b/Qx.rewrite.baidu.conf
@@ -3,4 +3,4 @@ hostname = *.bdstatic.com, *.baidu.com
 # pure baidu
 ^https?:\/\/.*\.baidu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 15_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 matrixstyle/0 SP-engine/2.30.0 main%2F1.0 matrixstyle/0 flyflow/5.7.1.30 baiduboxapp/5.7.1.30 (Baidu; P2 15.1) NABar/1.0$2
 ^https?:\/\/.*\.bdstatic\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 15_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 matrixstyle/0 SP-engine/2.30.0 main%2F1.0 matrixstyle/0 flyflow/5.7.1.30 baiduboxapp/5.7.1.30 (Baidu; P2 15.1) NABar/1.0$2
-^https?:\/\/.*\.baidu\.com\/.*s\?word url script-response-body https://raw.githubusercontent.com/shinrai2/Qx.js/main/pure_searchbox.js
+^https?:\/\/.*\.baidu\.com\/.*s\?word url script-response-body https://rawcdn.githack.com/shinrai2/Qx.js/c942fe72cb3ea550fcadeccfd30796d9edd29d0f/pure_searchbox.js?min=1
